# workspace

./: README.md  github.txt  sample.rs  url.md  url.txt
C++_workspace/: README.txt  touch.txt
C++_workspace/debug/: debug.cpp
C_workspace/: README.txt
C_workspace/SeparateCompilation/: euclid.c  euclid.h  input.c  main.c  output.c
C_workspace/debug/: debug.c
C_workspace/sample/: sample.c
Java_workspace/lib/: Input.java
Java_workspace/sample/: method.java  sample.java  sandbox.java
Python_workspace/: README.txt  pip.txt
Python_workspace/Section03/: tempCodeRunnerFile.py
Python_workspace/Section11/: calc.py  closure_charge.py
Python_workspace/jupyter/: pytorch.ipynb  sample.ipynb  sample_2020.ipynb  sample_3D.ipynb  tensor.ipynb
Python_workspace/jupyter_notebook/: pytorch.ipynb  tensor.ipynb
Python_workspace/sample/: plot.py  plot2.py  pytorch.py  sample.py  sample2.py  sample_chain.py  sample_keras.py  tensor.py  test1.py
Rust_workspace/: .gitattributes  Cargo.toml  README.md  StandardLibrary.md  async_std.md  futures.md  github.txt  plotters.md  readme.md  readme.txt
Rust_workspace/rust_basics/basic/chapter03/rust_bicycle_book/bitonic-sorter/: Cargo.toml
Rust_workspace/rust_basics/basic/chapter03/rust_bicycle_book/bitonic-sorter/examples/: benchmark.rs  execBenchMark.sh
Rust_workspace/rust_basics/basic/chapter03/rust_bicycle_book/bitonic-sorter/src/: first.rs  fourth.rs  lib.rs  second.rs  third.rs
Rust_workspace/rust_basics/basic/chapter03/rust_bicycle_book/bitonic-sorter/test/: test.rs
julia_workspace/: plot.jl
(+693 files in other folders)
