[package]
name = "bitonic-sorter"
version = "0.1.0"
authors = ["ytakasugi <sh7.tibi0129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.8"
rand = "0.6"
rand_pcg = "0.1"
rayon = "1.0"

[dev-dependencies]
cli_test_dir = "0.1"
regex = "1"